--- a/neighborgoods-app/src/app/components/header/header.component.html
+++ b/neighborgoods-app/src/app/components/header/header.component.html
@@ -21,8 +21,11 @@
     </div>
 
     <div class="button-container">
-      <button mat-flat-button (click)="openDialog()">Utwórz ogłoszenie</button>
-      <button mat-flat-button color="accent" routerLink="/login">Zaloguj</button>
+      <button *ngIf="isUserLoggedIn" mat-flat-button (click)="openDialog()">Utwórz ogłoszenie</button>
+      <button *ngIf="isUserLoggedIn" mat-flat-button color="accent">Konto</button>
+      
+      <button *ngIf="!isUserLoggedIn" mat-flat-button routerLink="/login">Utwórz ogłoszenie</button>
+      <button *ngIf="!isUserLoggedIn" mat-flat-button color="accent" routerLink="/login">Zaloguj</button>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
