--- a/neighborgoods-app/src/app/components/login/login.component.scss
+++ b/neighborgoods-app/src/app/components/login/login.component.scss
@@ -3,10 +3,22 @@
     margin: auto;
 }
 
+.no-account-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 mat-card {
     margin: 60px;
     padding: 110px 40px 40px 40px;
     height: 300px;
+}
+
+.mat-card-actions {
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .mat-card-header {
