--- a/neighborgoods-app/src/app/components/main-section-components/announcement-details/announcement-details.component.html
+++ b/neighborgoods-app/src/app/components/main-section-components/announcement-details/announcement-details.component.html
@@ -1,17 +1,21 @@
 <div class="card-container">
-    <mat-card class="example-card" *ngFor="let announcement of announcements">
+    <mat-card class="example-card">
         <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
             <mat-card-title>{{ announcement.title }}</mat-card-title>
             <mat-card-subtitle> {{ announcement.user }} </mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
+            <p> {{ announcement.phoneNumber }} 
+            </p>
+            <mat-divider></mat-divider>
             <p>
                 {{ announcement.description }}
             </p>
+            <mat-divider></mat-divider>
+
         </mat-card-content>
         <mat-card-actions>
-            <button mat-button color="primary" (click)="openAnnouncementDetailsDialog()">Więcej</button>
         </mat-card-actions>
     </mat-card>
 </div>
