--- a/neighborgoods-app/src/app/components/search-section-components/filters/filters.component.html
+++ b/neighborgoods-app/src/app/components/search-section-components/filters/filters.component.html
@@ -1,19 +1,22 @@
+<div class="main-container">
 <div class="search-container">
   <mat-form-field class="search">
     <mat-chip-list #chipList>
       <mat-chip *ngFor="let chip of searchChips" [selectable]="selectable" [removable]="removable"
-        (removed)="removeSearchChip(chip)">
-        {{ chip.name }}
-        <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-      </mat-chip>
-      <input placeholder="Szukaj" [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-        [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="addSearchChip($event)" />
-      <mat-button class="search-button" (click)="search()">
-        <mat-icon>search</mat-icon>
-      </mat-button>
-    </mat-chip-list>
-  </mat-form-field>
+      (removed)="removeSearchChip(chip)">
+      {{ chip.name }}
+      <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+    </mat-chip>
+    <input placeholder="Szukaj" [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+    [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="addSearchChip($event)" />
+    <mat-button class="search-button" (click)="search()">
+      <mat-icon>search</mat-icon>
+    </mat-button>
+  </mat-chip-list>
+</mat-form-field>
+</div>
 
+<div class="filters-container">
   <button mat-button [matMenuTriggerFor]="localization">Wybierz lokalizację</button>
   <mat-menu #localization="matMenu">
     <button mat-menu-item (click)="chooseLocalization('Lokalizacja')">Moja lokalizacja</button>
@@ -41,10 +44,9 @@
   <mat-form-field appearance="fill">
     <mat-label>Kategoria</mat-label>
     <mat-select>
-      <mat-option *ngFor="let category of announcementCategory" [value]="category.id" (click)="chooseCategory(category.id)">{{category.name}}
+      <mat-option *ngFor="let category of announcementCategory" [value]="category.name" (click)="chooseCategory(category.name)">{{category.description}}
       </mat-option>
     </mat-select>
   </mat-form-field>
-
-
+</div>
 </div>
