--- a/neighborgoods-app/src/app/components/main-section-components/announcement-card/announcement-card.component.html
+++ b/neighborgoods-app/src/app/components/main-section-components/announcement-card/announcement-card.component.html
@@ -1,17 +1,29 @@
 <div class="card-container">
-    <mat-card class="example-card" *ngFor="let announcement of announcements">
-        <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>{{ announcement.title }}</mat-card-title>
-            <mat-card-subtitle> {{ announcement.user }} </mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <p>
-                {{ announcement.description }}
-            </p>
-        </mat-card-content>
-        <mat-card-actions>
-            <button mat-button color="primary" (click)="openAnnouncementDetailsDialog()">Więcej</button>
-        </mat-card-actions>
-    </mat-card>
+  <mat-card class="example-card" *ngFor="let announcement of announcements">
+    <mat-card-header>
+      <div mat-card-avatar class="icon-style" [ngSwitch]="announcement.category">
+        <mat-icon *ngSwitchCase="'babysitting'">child_friendly</mat-icon>
+        <mat-icon *ngSwitchCase="'work'">business_center</mat-icon>
+        <mat-icon *ngSwitchCase="'accommodation'">hotel</mat-icon>
+        <mat-icon *ngSwitchCase="'animals'">pets</mat-icon>
+        <mat-icon *ngSwitchCase="'shopping'">add_shopping_cart</mat-icon>
+        <mat-icon *ngSwitchCase="'services'">build</mat-icon>
+        <mat-icon *ngSwitchCase="'meeting'">sentiment_very_satisfied</mat-icon>
+        <mat-icon *ngSwitchCase="'other'">more_horiz</mat-icon>
+      </div>
+      <mat-card-title>{{ announcement.title }}</mat-card-title>
+      <button mat-flat-button color="accent" class="price-section">{{ announcement.price }} zł</button>
+      <mat-card-subtitle> {{ announcement.user }} </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        {{ announcement.description }}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <!-- <button mat-button color="primary" (click)="openAnnouncementDetailsDialog()">Więcej</button> -->
+      <button mat-button>Email: {{ announcement.email }}</button>
+      <button mat-button color="primary">Nr. telefonu: {{ announcement.phoneNumber }}</button>
+    </mat-card-actions>
+  </mat-card>
 </div>
