--- a/neighborgoods-app/src/app/components/main-section-components/announcement-card/announcement-card.component.scss
+++ b/neighborgoods-app/src/app/components/main-section-components/announcement-card/announcement-card.component.scss
@@ -13,5 +13,22 @@ mat-card {
 
 mat-card-actions {
     display: flex;
+    flex-direction: column;
     justify-content: flex-end;
+}
+
+.icon-style {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.price-section {
+    width: 30px;
+    height: 35px;
+}
+
+mat-card-header {
+    display: flex;
+    justify-content: space-between;
 }
