--- a/neighborgoods-app/src/app/components/main-section-components/announcement-details/announcement-details.component.html
+++ b/neighborgoods-app/src/app/components/main-section-components/announcement-details/announcement-details.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<!-- <div class="card-container">
     <mat-card class="example-card">
         <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
@@ -18,4 +18,4 @@
         <mat-card-actions>
         </mat-card-actions>
     </mat-card>
-</div>
+</div> -->
